# IR-labs

./: .gitignore  README.md  docker-compose.yml
engine/: CMakeLists.txt  Dockerfile
engine/src/: boolean_search.cpp  boolean_search.h  inverted_index.cpp  inverted_index.h  json_reader.cpp  json_reader.h  main.cpp  stemmer.cpp  stemmer.h  string_map.h  tokenizer.cpp  tokenizer.h  zipf_analyzer.cpp  zipf_analyzer.h
frontend/: Dockerfile  app.py
frontend/templates/: index.html
report/: Makefile  report.tex
report/src/: conclusion.tex  lab1_corpus.tex  lab2_crawler.tex  lab3_tokenization.tex  lab4_stemming.tex  lab5_zipf.tex  lab6_index.tex  lab7_search.tex  literature.tex  task.tex  titlepage.tex
scraper/: Dockerfile  config.yaml  requirements.txt  scraper.py
